// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Span /> renders default 1`] = `
.c0 {
  font-weight: 400;
  font-size: 1.3rem;
  color: #767676;
}

<span
  className="c0"
/>
`;

exports[`<Span /> renders with theme 1`] = `
.c0 {
  font-weight: 400;
  font-size: 1.3rem;
  color: #8d8d8d;
}

<span
  className="c0"
/>
`;

exports[`renders default <LabelSpan /> 1`] = `
.c0 {
  position: relative;
  z-index: 100;
}

<span
  className="c0"
/>
`;
